# egui_alignments

./: CHANGELOG.md  Cargo.toml  README.md
crates/egui_alignments/: Cargo.toml
crates/egui_alignments/src/: aligned_widget.rs  aligner.rs  container.rs  lib.rs
crates/egui_alignments/src/container/: column.rs  row.rs
examples/alignments/: Cargo.toml
examples/alignments/src/: main.rs
examples/containers/: Cargo.toml
examples/containers/src/: main.rs
src/: lib.rs
