[package]
name = "egui_alignments"
version.workspace = true
edition.workspace = true
description = "Simple alignment tools for egui"
readme = "../../README.md"
keywords = ["egui", "alignment", "layout"]
homepage = "https://github.com/a-littlebit/egui_alignments"
repository = "https://github.com/a-littlebit/egui_alignments"
license.workspace = true

[dependencies]
egui = "0.29.0"
